--- a/thesis-a/report/pubs.bib
+++ b/thesis-a/report/pubs.bib
@@ -1,74 +1,3 @@
-@BOOK{Sid99,
-   AUTHOR = {Charles H. Sides},
-   YEAR = {1999},
-   TITLE = {How to Write \& Present Technical Information},
-   EDITION = {3rd},
-   ADDRESS = {Cambridge},
-   PUBLISHER = {Cambridge University Press}   }
-
-@BOOK{StrWhi79,
-   AUTHOR = {Strunk Jr., William and E. B. White},
-   YEAR = {1979},
-   TITLE = {The Elements of Style},
-   EDITION = {3rd},
-   ADDRESS = {New York},
-   PUBLISHER = {Macmillan Publishing Co.}   }
-
-@BOOK{Coo64,
-   author={Bruce M. Cooper},
-   title={Writing Technical Reports},
-   publisher={Penguin Books},
-   year={1964},
-   address={Middlesex}}
-
-@MISC{Noo05,
-   author={Saeid Nooshabadi},
-   title={Bachelor of Engineering Thesis and Project:
-      timetable and notes for students},
-   howpublished={http://\hspace{0cm}\relax
-      scoff.ee.unsw.edu.au/\hspace{0cm}document/\hspace{0cm}\relax
-      thesis/\hspace{0cm}thnotes2.pdf, accessed 14/11/2005},
-   year={2005},
-   note={School of El.\ Eng.\ and Telecom., UNSW} }
-
-@MISC{She05,
-   author={John Shepherd},
-   title={Doing a CSE Thesis},
-   howpublished={http://\hspace{0cm}\relax
-      www.cse.unsw.edu.au/\hspace{0cm}\~{}jas/talks/\hspace{0cm}\relax
-      thesis/, accessed 14/11/2005},
-   year={2005},
-   note={School of Comp.\ Sci.\ and Eng., UNSW} }
-
-@ARTICLE{NieLeh03,
-   AUTHOR = {Jannik Hammel Nielsen and Torsten Lehmann},
-   YEAR = {2003},
-   TITLE = {An Implantable {CMOS} Amplifier for Nerve Signals},
-   JOURNAL = {Analog Integrated Circuits and Signal Processing},
-   VOLUME = {36},
-   NUMBER = {1--2},
-   MONTH = {July-August},
-   PAGES = {153--164}  }
-
-@INPROCEEDINGS{HasLehKwo05,
-   AUTHOR = {Tawfique Hasan and Torsten Lehmann and Chee Yee Kwok},
-   YEAR = {2005},
-   TITLE = {A 5{V} Charge Pump in a Standard 1.8{V} 0.8{$\mu$m} {CMOS}
-                Process},
-   BOOKTITLE = {{IEEE} International Symposium on Circuits and Systems},
-   PAGES = {1899-1902},
-   ADDRESS = {Kobe, Japan} }
-
-@MISC{GRS14,
-   author={GRS},
-   title={Thesis Format Guide: A guide for candidates preparing to submit their thesis for examination},
-   howpublished={https://\hspace{0cm}\relax 
-      research.unsw.edu.au/\hspace{0cm}\relax       
-      document/\hspace{0cm}\relax 
-      thesis\_format\_guide.pdf\hspace{0cm}\relax, accessed 14/04/2015},
-   year={2014},
-   note={Graduate Research School, UNSW} }
-
 @online{ManGprof,
    author = "BSD",
    title = "gprof man pages",
@@ -296,6 +225,13 @@
    title = "Microkernels: Reducing the Trusted Computing Base",
    url = "https://www.cse.unsw.edu.au/~cs9242/20/lectures/01a-intro.pdf"
 }
+
+@online{SiteTop500Project,
+   author = "Top 500",
+   title = "November 2021",
+   url = "https://www.top500.org/lists/top500/2021/11/"
+}
+
 
 %% Not yet citated
 %% https://pittrasg.github.io/blog/2020/pmusarm/
